--- a/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
+++ b/FinancyApp/FinancyApp/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
                         <a asp-controller="Account" asp-action="Register" class="list-text">Register</a>
                     </li>
                     <li>
-                        <img class="img-item" src="~/photos/info_icon-1.png" />
-                        <a class="list-text">About us</a>
+                        <img class="img-item" src="~/photos/questing.png" style="height: 35px; width:35px" />
+                        <a asp-action="Instructions" asp-controller="Account" class="list-text">Instructions</a>
                     </li>
                 }
                 else
